examples/examples/snapshots/manual_reqwest__test__running_query.snap
---
source: examples/examples/manual-reqwest.rs
expression: result.data
---
Some(
    FilmDirectorQuery {
        film: Some(
            Film {
                title: Some(
                    "A New Hope",
                ),
                director: Some(
                    "George Lucas",
                ),
            },
        ),
    },
)
