examples/examples/snapshots/manual_reqwest__test__snapshot_test_menu_query.snap
---
source: examples/examples/manual-reqwest.rs
expression: query.query
---
query Query($_0: ID) {
  film(id: $_0) {
    title
    director
  }
}

