examples/examples/snapshots/manual_reqwest__test__snapshot_test_query.snap
---
source: examples/examples/manual-reqwest.rs
assertion_line: 74
expression: query.query
---
query($id: ID) {
  film(id: $id) {
    title
    director
  }
}


